Fix: Add oniguruma-dev for mbstring

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -17,6 +17,7 @@ RUN apk add --no-cache \
     zip \
     unzip \
     mysql-client \
+    oniguruma-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install -j$(nproc) \
     pdo \
